# BachelorThesis

./: .classpath  .gitignore  .project  README.md  pom.xml
BachelorThesis/: .project
BachelorThesis/src/: PTIME_Algorithm.java  P_Algorithm.java
analysis/: .gitignore  NC_analysis.py  PTime_analysis.py  Util.py  julia-java-analysis.py
analysis/__pycache__/: .gitignore
cpp/: CMakeLists.txt  Makefile  README.md
cpp/include/: io.hpp  strong_dis.hpp
cpp/src/: io.cpp  strong_dis.cpp
cpp/tests/: strong_dis_tests.cpp
input/ICCMA/: test.af
julia/: Io.jl  StrongDis.jl  benchmark_StrongDis_MM.jl  benchmark_StrongDis_MV.jl  result_validation.jl  runtime_analysis_MM.jl  runtime_analysis_MV.jl
results/: cpp_results_MM_alt.csv  cpp_results_MV_alt.csv  java_results_ejml.csv  java_results_ejml_nc.csv  julia_results_MM_withTypeAnnotation.csv  julia_results_MM_withoutTypeAnnotation.csv  julia_results_MV_withTypAnnotation.csv  julia_results_MV_withoutTypAnnotation.csv  runtime_comparison_mm.textClipping  rust_results_MM_alt.csv  rust_results_MM_opt.csv  rust_results_MV.csv  rust_results_MV_alt.csv
rust/: Cargo.toml  README.md
rust/src/: io.rs  lib.rs  strong_dis.rs  strong_dis_opt.rs
src/: Main.java  NC_Algorithm.java  PTIME_Algorithm.java  Util.java
src/main/java/io/: Util.java
src/main/java/model/: Instance.java  NC_Algorithm.java  PTIME_Algorithm.java
src/main/java/service/: IccmaAnalysis.java  JuliaComparison.java  Main.java  NC_Algorithm.java  PTIME_Algorithm.java  RunTimeAnalysis.java  RunTimeAnalysisNC.java  RunTimeAnalysisPTIME.java  Util.java
src/test/java/: AlgorithmTest.java  testMain.java
tests/: testMain.java
(+2 files in other folders)
